--- a/public/styles/shared/general.css
+++ b/public/styles/shared/general.css
@@ -25,22 +25,22 @@ input, select, button {
 }
 
 .button-primary {
-  color: rgb(33, 33, 33);
-  background-color: rgb(255, 216, 20);
-  border: 1px solid rgb(252, 210, 0);
+  color:white;
+  background-color: #1A5319;
+  border: 1px solid #80AF81;
   border-radius: 8px;
   cursor: pointer;
   box-shadow: 0 2px 5px rgba(213, 217, 217, 0.5);
 }
 
 .button-primary:hover {
-  background-color: rgb(247, 202, 0);
-  border: 1px solid rgb(242, 194, 0);
+  background-color: #247623;
+  border: 1px solid #88bb89;
 }
 
 .button-primary:active {
-  background: rgb(255, 216, 20);
-  border-color: rgb(252, 210, 0);
+  background: #22c820;
+  border-color: #05bf02;
   box-shadow: none;
 }
 
