--- a/public/styles/shared/market-zaglavlje.css
+++ b/public/styles/shared/market-zaglavlje.css
@@ -1,4 +1,4 @@
-.amazon-header {
+.market-zaglavlje {
   background-color: #1A5319;
   color: white;
   padding-left: 15px;
@@ -15,12 +15,12 @@
   height: 60px;
 }
 
-.amazon-header-left-section {
+.market-zaglavlje-left-section {
   width: 180px;
 }
 
 @media (max-width: 800px) {
-  .amazon-header-left-section {
+  .market-zaglavlje-left-section {
     width: unset;
   }
 }
@@ -59,7 +59,7 @@
   }
 }
 
-.amazon-header-middle-section {
+.market-zaglavlje-middle-section {
   flex: 1;
   max-width: 850px;
   margin-left: 10px;
@@ -96,7 +96,7 @@
   margin-top: 3px;
 }
 
-.amazon-header-right-section {
+.market-zaglavlje-right-section {
   width: 180px;
   flex-shrink: 0;
   display: flex;
