--- a/public/stilovi/zajednicki/market-zaglavlje.css
+++ b/public/stilovi/zajednicki/market-zaglavlje.css
@@ -80,7 +80,7 @@
   border-bottom-right-radius: 0;
 }
 
-.search-button {
+.dugme-za-pretragu {
   background-color: #D6EFD8;
   border: none;
   width: 45px;
