--- a/public/stilovi/stranice/tracking.css
+++ b/public/stilovi/stranice/tracking.css
@@ -13,7 +13,7 @@
   margin-right: auto;
 }
 
-.back-to-orders-link {
+.back-to-porudzbine-link {
   display: inline-block;
   margin-bottom: 30px;
 }
