--- a/public/stilovi/stranice/naplata/naplata.css
+++ b/public/stilovi/stranice/naplata/naplata.css
@@ -226,17 +226,17 @@
   display: initial;
 }
 /* checkout update/input end */
-.confirm-hidden{
+.potvrdi-skriveno{
   display: none;
 }
-.confirm-window{
+.potvrdi-prozor{
   z-index: 1001;
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
-.confirm-window{
+.potvrdi-prozor{
   display: flex;
   justify-content: center;
   align-items: center;
@@ -244,13 +244,13 @@
   height: 100vh;
   width: 100%;
 }
-.confirm-window > div > p{
+.potvrdi-prozor > div > p{
   font-size: 20px;
   color: rgb(255, 216, 20);
   text-align: center;
   margin-bottom: 20px;
 }
-.confirm-window > div > button{
+.potvrdi-prozor > div > button{
   background-color: rgb(255, 216, 20);
   border: 2px solid rgb(255, 216, 20);
   color: black;
@@ -259,6 +259,6 @@
   font-family: bold;
   border-radius: 13px;
 }
-.confirm-window-yes{
+.potvrdi-prozor-da{
   margin-right: 30px;
 }
