--- a/public/stilovi/stranice/porudzbine.css
+++ b/public/stilovi/stranice/porudzbine.css
@@ -145,7 +145,7 @@
   margin-bottom: 8px;
 }
 
-.buy-again-button {
+.kupi-ponovo-button {
   font-size: 15px;
   width: 140px;
   height: 36px;
@@ -156,7 +156,7 @@
   justify-content: center;
 }
 
-.buy-again-icon {
+.kupi-ponovo-icon {
   width: 25px;
   margin-right: 15px;
 }
@@ -172,7 +172,7 @@
 }
 
 @media (max-width: 800px) {
-  .buy-again-button {
+  .kupi-ponovo-button {
     margin-bottom: 10px;
   }
 
@@ -210,7 +210,7 @@
     margin-bottom: 15px;
   }
 
-  .buy-again-button {
+  .kupi-ponovo-button {
     width: 100%;
     margin-bottom: 15px;
   }
