--- a/opstifolder/stilovi/stranice/market.css
+++ b/opstifolder/stilovi/stranice/market.css
@@ -130,7 +130,7 @@
   flex: 1;
 }
 
-.added-to-cart {
+.added-to-korpa {
   color: rgb(6, 125, 98);
   font-size: 16px;
 
@@ -138,20 +138,20 @@
   align-items: center;
   margin-bottom: 8px;
 
-  /* At first, the "Added to cart" message will
+  /* At first, the "Added to korpa" message will
      be invisible. Use JavaScript to change the
      opacity and make it visible. */
   opacity: 0;
 }
-.added-to-cart-clicked{
+.added-to-korpa-clicked{
   opacity: 1;
 }
-.added-to-cart img {
+.added-to-korpa img {
   height: 20px;
   margin-right: 5px;
 }
 
-.add-to-cart-button {
+.add-to-korpa-button {
   width: 100%;
   padding: 8px;
   border-radius: 50px;
