--- a/opstifolder/stilovi/stranice/naplata/naplata.css
+++ b/opstifolder/stilovi/stranice/naplata/naplata.css
@@ -115,7 +115,7 @@
   margin-bottom: 5px;
 }
 
-.product-quantity .link-primary {
+.product-kolicina .link-primary {
   margin-left: 3px;
 }
 
@@ -210,33 +210,33 @@
   margin-bottom: 15px;
 }
 /* checkout update/input start */
-.quantity-imput{
+.kolicina-imput {
   width: 30px;
 }
-.quantity-imput,
-.save-quantity-link{
+.kolicina-imput,
+.save-kolicina-link {
   display: none;
 }
-.is-editing-quantity .quantity-label,
-.is-editing-quantity .update-quantity-link{
+.is-editing-kolicina .kolicina-label,
+.is-editing-kolicina .update-kolicina-link {
   display: none;
 }
-.is-editing-quantity .quantity-imput,
-.is-editing-quantity .save-quantity-link{
+.is-editing-kolicina .kolicina-imput,
+.is-editing-kolicina .save-kolicina-link {
   display: initial;
 }
 /* checkout update/input end */
-.potvrdi-skriveno{
+.potvrdi-skriveno {
   display: none;
 }
-.potvrdi-prozor{
+.potvrdi-prozor {
   z-index: 1001;
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
-.potvrdi-prozor{
+.potvrdi-prozor {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -244,13 +244,13 @@
   height: 100vh;
   width: 100%;
 }
-.potvrdi-prozor > div > p{
+.potvrdi-prozor > div > p {
   font-size: 20px;
   color: rgb(255, 216, 20);
   text-align: center;
   margin-bottom: 20px;
 }
-.potvrdi-prozor > div > button{
+.potvrdi-prozor > div > button {
   background-color: rgb(255, 216, 20);
   border: 2px solid rgb(255, 216, 20);
   color: black;
@@ -259,6 +259,6 @@
   font-family: bold;
   border-radius: 13px;
 }
-.potvrdi-prozor-da{
+.potvrdi-prozor-da {
   margin-right: 30px;
 }
