--- a/opstifolder/stilovi/stranice/porudzbine.css
+++ b/opstifolder/stilovi/stranice/porudzbine.css
@@ -141,7 +141,7 @@
   margin-bottom: 3px;
 }
 
-.product-quantity {
+.product-kolicina {
   margin-bottom: 8px;
 }
 
@@ -206,7 +206,7 @@
     margin-bottom: 10px;
   }
 
-  .product-quantity {
+  .product-kolicina {
     margin-bottom: 15px;
   }
 
