--- a/opstifolder/stilovi/stranice/naplata/naplata.css
+++ b/opstifolder/stilovi/stranice/naplata/naplata.css
@@ -61,14 +61,14 @@
   .pregled-naplate {
     /* grid-row: 1 means this element will be placed into row
       1 in the grid. (Normally, the row that an element is
-      placed in is determined by the order of the elements in
+      placed in is determined by the porucbina of the elements in
       the HTML. grid-row overrides this default ordering). */
     grid-row: 1;
     margin-bottom: 12px;
   }
 }
 
-.delivery-date {
+.dostava-date {
   color: rgb(0, 118, 0);
   font-weight: 700;
   font-size: 19px;
@@ -120,10 +120,10 @@
 }
 
 @media (max-width: 1000px) {
-  .delivery-options {
+  .dostava-options {
     /* grid-column: 1 means this element will be placed
        in column 1 in the grid. (Normally, the column that
-       an element is placed in is determined by the order
+       an element is placed in is determined by the porucbina
        of the elements in the HTML. grid-column overrides
        this default ordering).
        
@@ -134,30 +134,30 @@
   }
 }
 
-.delivery-options-title {
+.dostava-options-title {
   font-weight: 700;
   margin-bottom: 10px;
 }
 
-.delivery-option {
+.dostava-option {
   display: grid;
   grid-template-columns: 24px 1fr;
   margin-bottom: 12px;
   cursor: pointer;
 }
 
-.delivery-option-input {
+.dostava-option-input {
   margin-left: 0px;
   cursor: pointer;
 }
 
-.delivery-option-date {
+.dostava-option-date {
   color: rgb(0, 118, 0);
   font-weight: 500;
   margin-bottom: 3px;
 }
 
-.delivery-option-price {
+.dostava-option-price {
   color: rgb(120, 120, 120);
   font-size: 15px;
 }
@@ -200,7 +200,7 @@
   padding-top: 18px;
 }
 
-.place-order-button {
+.place-porucbina-button {
   width: 100%;
   padding-top: 12px;
   padding-bottom: 12px;
