--- a/opstifolder/stilovi/stranice/porudzbine.css
+++ b/opstifolder/stilovi/stranice/porudzbine.css
@@ -25,7 +25,7 @@
   row-gap: 50px;
 }
 
-.order-header {
+.porucbina-header {
   background-color: rgb(240, 242, 242);
   border: 1px solid rgb(213, 217, 217);
 
@@ -38,54 +38,54 @@
   border-top-right-radius: 8px;
 }
 
-.order-header-left-section {
+.porucbina-header-left-section {
   display: flex;
   flex-shrink: 0;
 }
 
-.order-header-label {
+.porucbina-header-label {
   font-weight: 500;
 }
 
-.order-date,
-.order-total {
+.porucbina-date,
+.porucbina-total {
   margin-right: 45px;
 }
 
-.order-header-right-section {
+.porucbina-header-right-section {
   flex-shrink: 1;
 }
 
 @media (max-width: 575px) {
-  .order-header {
+  .porucbina-header {
     flex-direction: column;
     align-items: start;
     line-height: 23px;
     padding: 15px;
   }
 
-  .order-header-left-section {
+  .porucbina-header-left-section {
     flex-direction: column;
   }
 
-  .order-header-label {
+  .porucbina-header-label {
     margin-right: 5px;
   }
 
-  .order-date,
-  .order-total {
+  .porucbina-date,
+  .porucbina-total {
     display: grid;
     grid-template-columns: auto 1fr;
     margin-right: 0;
   }
 
-  .order-header-right-section {
+  .porucbina-header-right-section {
     display: grid;
     grid-template-columns: auto 1fr;
   }
 }
 
-.order-details-grid {
+.porucbina-details-grid {
   padding: 40px 25px;
   border: 1px solid rgb(213, 217, 217);
   border-top: none;
@@ -99,7 +99,7 @@
   align-items: center;
 }
 
-.remove-order {
+.remove-porucbina {
   display: inline-block;
   color: white;
   background-color: #531919;
@@ -110,7 +110,7 @@
 }
 
 @media (max-width: 800px) {
-  .order-details-grid {
+  .porucbina-details-grid {
     grid-template-columns: 110px 1fr;
     row-gap: 0;
     padding-bottom: 8px;
@@ -118,7 +118,7 @@
 }
 
 @media (max-width: 450px) {
-  .order-details-grid {
+  .porucbina-details-grid {
     grid-template-columns: 1fr;
   }
 }
@@ -137,7 +137,7 @@
   margin-bottom: 5px;
 }
 
-.product-delivery-date {
+.product-dostava-date {
   margin-bottom: 3px;
 }
 
@@ -179,7 +179,7 @@
   .product-actions {
     /* grid-column: 2 means this element will be placed
        in column 2 in the grid. (Normally, the column that
-       an element is placed in is determined by the order
+       an element is placed in is determined by the porucbina
        of the elements in the HTML. grid-column overrides
        this default ordering). */
     grid-column: 2;
