--- a/opstifolder/stilovi/stranice/pracenje.css
+++ b/opstifolder/stilovi/stranice/pracenje.css
@@ -24,11 +24,11 @@
   margin-bottom: 10px;
 }
 
-.product-info {
+.proizvod-info {
   margin-bottom: 3px;
 }
 
-.product-image {
+.proizvod-image {
   max-width: 150px;
   max-height: 150px;
   margin-top: 25px;
