--- a/opstifolder/stilovi/stranice/pracenje.css
+++ b/opstifolder/stilovi/stranice/pracenje.css
@@ -18,7 +18,7 @@
   margin-bottom: 30px;
 }
 
-.dostava-date {
+.dostava-datum {
   font-size: 25px;
   font-weight: 700;
   margin-bottom: 10px;
@@ -28,7 +28,7 @@
   margin-bottom: 3px;
 }
 
-.proizvod-image {
+.proizvod-slika {
   max-width: 150px;
   max-height: 150px;
   margin-top: 25px;
