--- a/opstifolder/stilovi/stranice/naplata/naplata.css
+++ b/opstifolder/stilovi/stranice/naplata/naplata.css
@@ -68,7 +68,7 @@
   }
 }
 
-.dostava-date {
+.dostava-datum {
   color: rgb(0, 118, 0);
   font-weight: 700;
   font-size: 19px;
@@ -76,7 +76,7 @@
   margin-bottom: 22px;
 }
 
-.korpa-item-details-grid {
+.korpa-artikal-detalji-grid {
   display: grid;
   /* 100px 1fr 1fr; means the 2nd and 3rd column will
      take up half the remaining space in the grid
@@ -86,13 +86,13 @@
 }
 
 @media (max-width: 1000px) {
-  .korpa-item-details-grid {
+  .korpa-artikal-detalji-grid {
     grid-template-columns: 100px 1fr;
     row-gap: 30px;
   }
 }
 
-.proizvod-image {
+.proizvod-slika {
   max-width: 100%;
   max-height: 120px;
 
@@ -104,23 +104,23 @@
   margin-right: auto;
 }
 
-.proizvod-name {
+.proizvod-ime {
   font-weight: 700;
   margin-bottom: 8px;
 }
 
-.proizvod-price {
+.proizvod-cena {
   color: rgb(177, 39, 4);
   font-weight: 700;
   margin-bottom: 5px;
 }
 
-.proizvod-kolicina .link-primary {
+.proizvod-kolicina .link-primarni {
   margin-left: 3px;
 }
 
 @media (max-width: 1000px) {
-  .dostava-options {
+  .dostava-opcije {
     /* grid-column: 1 means this element will be placed
        in column 1 in the grid. (Normally, the column that
        an element is placed in is determined by the porudzbina
@@ -134,30 +134,30 @@
   }
 }
 
-.dostava-options-title {
+.dostava-opcije-naslov {
   font-weight: 700;
   margin-bottom: 10px;
 }
 
-.dostava-option {
+.dostava-opcija {
   display: grid;
   grid-template-columns: 24px 1fr;
   margin-bottom: 12px;
   cursor: pointer;
 }
 
-.dostava-option-input {
+.dostava-opcija-unos {
   margin-left: 0px;
   cursor: pointer;
 }
 
-.dostava-option-date {
+.dostava-opcija-datum {
   color: rgb(0, 118, 0);
   font-weight: 500;
   margin-bottom: 3px;
 }
 
-.dostava-option-price {
+.dostava-opcija-cena {
   color: rgb(120, 120, 120);
   font-size: 15px;
 }
@@ -210,19 +210,19 @@
   margin-bottom: 15px;
 }
 /* checkout update/input start */
-.kolicina-imput {
+.kolicina-unos {
   width: 30px;
 }
-.kolicina-imput,
-.save-kolicina-link {
+.kolicina-unos,
+.sacuvaj-kolicinu-link {
   display: none;
 }
-.is-editing-kolicina .kolicina-label,
-.is-editing-kolicina .update-kolicina-link {
+.azuriranje-kolicine-u-toku .kolicina-label,
+.azuriranje-kolicine-u-toku .azuriraj-kolicinu-link {
   display: none;
 }
-.is-editing-kolicina .kolicina-imput,
-.is-editing-kolicina .save-kolicina-link {
+.azuriranje-kolicine-u-toku .kolicina-unos,
+.azuriranje-kolicine-u-toku .sacuvaj-kolicinu-link {
   display: initial;
 }
 /* checkout update/input end */
