--- a/opstifolder/stilovi/zajednicki/generalni-stil.css
+++ b/opstifolder/stilovi/zajednicki/generalni-stil.css
@@ -48,7 +48,7 @@ input, select, button {
   box-shadow: none;
 }
 
-.button-secondary {
+.dugme-sekundarno {
   color: rgb(33, 33, 33);
   background: white;
   border: 1px solid rgb(213, 217, 217);
@@ -57,11 +57,11 @@ input, select, button {
   box-shadow: 0 2px 5px rgba(213, 217, 217, 0.5);
 }
 
-.button-secondary:hover {
+.dugme-sekundarno:hover {
   background-color: rgb(247, 250, 250);
 }
 
-.button-secondary:active {
+.dugme-sekundarno:active {
   background-color: rgb(237, 253, 255);
   box-shadow: none;
 }
