--- a/opstifolder/stilovi/zajednicki/generalni-stil.css
+++ b/opstifolder/stilovi/zajednicki/generalni-stil.css
@@ -71,7 +71,7 @@ input, select, button {
    You can find this code by using an A.I. tool or by
    searching in Google.
    https://css-tricks.com/almanac/properties/l/line-clamp/ */
-.limit-text-to-2-lines {
+.limitiraj-tekst-na-2-linije {
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
