--- a/opstifolder/stilovi/stranice/market.css
+++ b/opstifolder/stilovi/stranice/market.css
@@ -143,7 +143,7 @@
      opacity and make it visible. */
   opacity: 0;
 }
-.dodato-u-korpu-clicked {
+.dodato-u-korpu-kliknuto {
   opacity: 1;
 }
 .dodato-u-korpu img {
