--- a/opstifolder/stilovi/stranice/porudzbine.css
+++ b/opstifolder/stilovi/stranice/porudzbine.css
@@ -141,7 +141,7 @@
   margin-bottom: 3px;
 }
 
-.proizvod-kolicina {
+.proizvod-količina {
   margin-bottom: 8px;
 }
 
@@ -206,7 +206,7 @@
     margin-bottom: 10px;
   }
 
-  .proizvod-kolicina {
+  .proizvod-količina {
     margin-bottom: 15px;
   }
 
