--- a/opstifolder/stilovi/stranice/naplata/naplata.css
+++ b/opstifolder/stilovi/stranice/naplata/naplata.css
@@ -1,4 +1,4 @@
-.glavni-sadrzaj {
+.glavni-sadržaj {
   max-width: 1100px;
   padding-left: 30px;
   padding-right: 30px;
@@ -33,7 +33,7 @@
 }
 
 @media (max-width: 1000px) {
-  .glavni-sadrzaj {
+  .glavni-sadržaj {
     max-width: 500px;
   }
 
