--- a/opstifolder/stilovi/stranice/naplata/naplata.css
+++ b/opstifolder/stilovi/stranice/naplata/naplata.css
@@ -200,7 +200,7 @@
   padding-top: 18px;
 }
 
-.mesto-porudzbine-dugme {
+.mesto-porudžbine-dugme {
   width: 100%;
   padding-top: 12px;
   padding-bottom: 12px;
