--- a/opstifolder/stilovi/stranice/porudžbine.css
+++ b/opstifolder/stilovi/stranice/porudžbine.css
@@ -19,7 +19,7 @@
   margin-bottom: 25px;
 }
 
-.porudzbine-gird {
+.porudžbine-gird {
   display: grid;
   grid-template-columns: 1fr;
   row-gap: 50px;
