--- a/opstifolder/stilovi/stranice/pracenje.css
+++ b/opstifolder/stilovi/stranice/pracenje.css
@@ -13,7 +13,7 @@
   margin-right: auto;
 }
 
-.povratak-na-porudzbine-link {
+.povratak-na-porudžbine-link {
   display: inline-block;
   margin-bottom: 30px;
 }
